--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
       href="https://fonts.googleapis.com/css?family=Roboto+Mono|Roboto+Slab|Roboto:300,400,500,700"
       rel="stylesheet"
     />
+    <script src="https://apis.google.com/js/platform.js"></script>
     <title>SRE Dashboard</title>
   </head>
   <body>
